// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> <Styled.Button /> Check disabled type 1`] = `
.c0 {
  position: relative;
  max-width: 320px;
  border-radius: 50vh;
  padding: 5px 20px;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  border: solid 2px #9a9c9f;
  background-color: #e8e8e8;
  cursor: not-allowed;
}

<button
  className="c0"
  type="disabled"
/>
`;

exports[`<Button /> <Styled.Button /> Check primary type 1`] = `
.c0 {
  position: relative;
  max-width: 320px;
  border-radius: 50vh;
  padding: 5px 20px;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  border: solid 2px #0077cc;
  background-color: #0077cc;
  color: #fff;
}

.c0:hover {
  background-color: #0095ff;
}

<button
  className="c0"
  type="primary"
/>
`;

exports[`<Button /> <Styled.Button /> Check secondary type 1`] = `
.c0 {
  position: relative;
  max-width: 320px;
  border-radius: 50vh;
  padding: 5px 20px;
  font-size: 12px;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  border: solid 2px #0077cc;
  background-color: #fff;
  color: #0077cc;
}

.c0:hover {
  border-color: #379fef;
  color: #379fef;
}

<button
  className="c0"
  type="secondary"
/>
`;

exports[`<Button /> <Styled.LoaderWrapper /> Should render correctly 1`] = `
.c0 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c0 > svg {
  display: block;
}

<span
  className="c0"
/>
`;

exports[`<Button /> Should render correctly 1`] = `
<Buttonstyles__Button
  type="primary"
>
  Test
</Buttonstyles__Button>
`;

exports[`<Button /> Should render correctly the busy loader 1`] = `
<Buttonstyles__Button
  type="disabled"
>
  Test
  <Buttonstyles__LoaderWrapper>
    <Loader
      color="blue-700"
      size="sm"
    />
  </Buttonstyles__LoaderWrapper>
</Buttonstyles__Button>
`;

exports[`<Button /> Should render correctly with disabled prop 1`] = `
<Buttonstyles__Button
  type="disabled"
>
  Test
</Buttonstyles__Button>
`;
